@@ -37,6 +37,7 @@ public class SearchPlantPane extends Pane implements PlantPane {
     private Plant plant;
     private SearchTabPaneController searchTabPaneController;
     private ListView listView;
+    private ImageView imgViewPlusSign;
     private boolean gotInfoOnPlant;
     private boolean extended;
     /**
@@ -111,14 +112,14 @@ public class SearchPlantPane extends Pane implements PlantPane {
         addButton.setLayoutX(705.0);
         addButton.setLayoutY(16.0);
         addButton.setMnemonicParsing(false);
-        addButton.setOnAction(_ -> searchTabPaneController.addPlantToCurrentUserLibrary(plant));
+        addButton.setOnAction(action -> searchTabPaneController.addPlantToCurrentUserLibrary(plant));
     }
 
     /**
      * Method to initialize the plus sign to the add button
      */
     private void initImgViewPlusSign() {
-        ImageView imgViewPlusSign = new ImageView(ImageLibrary.getPlusSign());
+        this.imgViewPlusSign = new ImageView(ImageLibrary.getPlusSign());
         imgViewPlusSign.setFitHeight(16);
         imgViewPlusSign.setFitWidth(15);
         addButton.setGraphic(imgViewPlusSign);
@@ -128,26 +129,29 @@ public class SearchPlantPane extends Pane implements PlantPane {
      * Method for what happens when a user presses the more info button
      */
     public void initEventHandlerForInfo() {
-        EventHandler onPress = _ -> {
-            infoButton.setDisable(true);
-            commonName.setDisable(true);
-            if (!extended) {
-                if (!gotInfoOnPlant) {
-                    PlantDetails plantDetails = searchTabPaneController.getPlantDetails(plant);
-                    String lightText = LightTextFormatter.getLightTextString(plantDetails.getLight());
-                    long waterInMilli = WaterCalculator.calculateWaterFrequencyForWatering(plantDetails.getWaterFrequency());
-                    String waterText = WaterTextFormatter.getWaterString(waterInMilli);
-                    ObservableList<String> plantInfo = FXCollections.observableArrayList();
-                    plantInfo.add("Genus: " +plantDetails.getGenus());
-                    plantInfo.add("Scientific name: "+plantDetails.getScientificName());
-                    plantInfo.add("Family: "+plantDetails.getFamily());
-                    plantInfo.add("Light: " +lightText);
-                    plantInfo.add("Water: "+waterText);
-                    listView.setItems(plantInfo);
+        EventHandler onPress = new EventHandler() {
+            @Override
+            public void handle(Event event) {
+                infoButton.setDisable(true);
+                commonName.setDisable(true);
+                if (!extended) {
+                    if (!gotInfoOnPlant) {
+                        PlantDetails plantDetails = searchTabPaneController.getPlantDetails(plant);
+                        String lightText = LightTextFormatter.getLightTextString(plantDetails.getLight());
+                        long waterInMilli = WaterCalculator.calculateWaterFrequencyForWatering(plantDetails.getWaterFrequency());
+                        String waterText = WaterTextFormatter.getWaterString(waterInMilli);
+                        ObservableList<String> plantInfo = FXCollections.observableArrayList();
+                        plantInfo.add("Genus: " +plantDetails.getGenus());
+                        plantInfo.add("Scientific name: "+plantDetails.getScientificName());
+                        plantInfo.add("Family: "+plantDetails.getFamily());
+                        plantInfo.add("Light: " +lightText);
+                        plantInfo.add("Water: "+waterText);
+                        listView.setItems(plantInfo);
+                    }
+                    extendPaneMoreInfoPlant();
+                } else {
+                    retractPane();
                 }
-                extendPaneMoreInfoPlant();
-            } else {
-                retractPane();
             }
         };
 
@@ -201,11 +205,11 @@ public class SearchPlantPane extends Pane implements PlantPane {
     public void extendPaneMoreInfoPlant() {
         AtomicReference<Double> height = new AtomicReference<>(this.getHeight());
         Timeline timeline = new Timeline(
-                new KeyFrame(Duration.millis(7.5), _ -> this.setPrefHeight(height.updateAndGet(v -> (v + 6.25))))
+                new KeyFrame(Duration.millis(7.5), event -> this.setPrefHeight(height.updateAndGet(v -> (double) (v + 6.25))))
         );
         timeline.setCycleCount(32);
         timeline.play();
-        timeline.setOnFinished(_ -> {
+        timeline.setOnFinished(action -> {
             this.getChildren().addAll(listView);
             infoButton.setDisable(false);
             commonName.setDisable(false);
@@ -218,19 +222,19 @@ public class SearchPlantPane extends Pane implements PlantPane {
      * Method to collapse the pane
      */
     public void retractPane() {
-        ObservableList list = listView.getItems();
-        for (int i = 0; i < list.size(); i++) {
-            list.removeFirst();
+        int size = listView.getItems().size();
+        for (int i = 0; i < size; i++) {
+            listView.getItems().remove(0);
         }
 
         AtomicReference<Double> height = new AtomicReference<>(this.getHeight());
         Timeline timeline = new Timeline(
-                new KeyFrame(Duration.millis(7.5), _ -> this.setPrefHeight(height.updateAndGet(v -> (v - 6.25))))
+                new KeyFrame(Duration.millis(7.5), event -> this.setPrefHeight(height.updateAndGet(v -> (double) (v - 6.25))))
         );
         timeline.setCycleCount(32);
         timeline.play();
         this.getChildren().removeAll(listView);
-        timeline.setOnFinished(_ -> {
+        timeline.setOnFinished(action -> {
             infoButton.setDisable(false);
             commonName.setDisable(false);
         });
